# jd2025-python-aula02

./: .gitignore  README.md  exercicios.py  main.py  pyproject.toml
