[project]
name = "jd2025-python-aula02"
version = "0.1.0"
description = ""
authors = [
    {name = "Edy Epumuceno Rodrigues Junior",email = "edyjrdev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
